[package]
name = "knightdag"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the knightdag system with web visualization"

[dependencies]
# Core dependencies
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json"] }

# Web framework and frontend
axum = "0.6"
tower-http = { version = "0.4", features = ["cors"] }
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
gloo = "0.8"

# Visualization
plotters = { version = "0.3", features = ["canvas"] }
plotters-backend = "0.3"

# Utilities
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
